--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     "require": {
         "php": "~5.6|~7.0",
         "gregoriohc/byname": "^1.0",
-        "gregoriohc/laravel-castable": "^2.0",
-        "gregoriohc/laravel-seedable": "^1.0",
-        "laravel/framework": "^5.0,<5.6",
+        "gregoriohc/laravel-castable": "~2.0",
+        "gregoriohc/laravel-seedable": "~1.0",
+        "laravel/framework": "~5.6",
         "spatie/laravel-translatable": "^2.1"
     },
     "require-dev": {
