--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,10 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0",
+        "php": "~7.0",
         "gregoriohc/byname": "^1.0.1",
         "gregoriohc/laravel-castable": "~2.0",
         "gregoriohc/laravel-seedable": "~1.0",
-        "laravel/framework": "~5.6",
         "spatie/laravel-translatable": "^2.1"
     },
     "require-dev": {
