--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "gregoriohc/byname": "^1.0.1",
         "gregoriohc/laravel-castable": "~3.0",
         "copemsamx/laravel-seedable": "dev-master",
-        "spatie/laravel-translatable": "6.7.1"
+        "spatie/laravel-translatable": "~5.0"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=4.0",
